--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,22 @@
   "description": "Hand drawn Button component",
   "main": "wired-button.html",
   "license": "MIT",
+  "demos": {
+    "Demo": "demo/index.html"
+  },
+  "authors": [
+    "Preet Shihn (twtr: @preetster)"
+  ],
+  "keywords": [
+    "web-components",
+    "web-component",
+    "polymer",
+    "wired",
+    "button",
+    "hand-drawn",
+    "handdrawn",
+    "wireframe"
+  ],
   "dependencies": {
     "polymer": "Polymer/polymer#^2.0.0",
     "wired-lib": "^0.1.0"
